[AOT] Segmentation fault when running java with AOTed Graal in -Xcomp mode on windows

XMLWordPrintable

    • b08
    • windows
    • Verified

      "java -version" fails with Segmentation fault when running with AOTed jdk.internal.vm.compiler module in Graal as JIT mode with -Xcomp. Here is the command used to run "java -version"

      > java -server -XX:+UnlockExperimentalVMOptions -XX:+EnableJVMCI -XX:+UseJVMCICompiler -Djvmci.Compiler=graal -Xcomp -XX:+UnlockDiagnosticVMOptions -XX:+PrintAOT -XX:+UseAOTStrictLoading -XX:AOTLibrary=testOutput/test-support/aot/jtreg_open_test_jdk_java_lang_Math_MinMax_java/jdk.internal.vm.compiler.dll -version


      jaotc was launched with:
      > jaotc -J-Xmx4g --info -J-server -J-XX:+UnlockExperimentalVMOptions -J-XX:+EnableJVMCI -J-XX:+UseJVMCICompiler -J-Djvmci.Compiler=graal --compile-commands src.full/open/test/hotspot/jtreg/compiler/aot/scripts/jdk.internal.vm.compiler-list.txt --linker-path PATH_TO_LINKER/link.exe --output testOutput/test-support/aot/jtreg_open_test_jdk_java_lang_Math_MinMax_java/jdk.internal.vm.compiler.dll --module jdk.internal.vm.compiler


      No crash in case -Xcomp is not used

            Assignee:
            Bob Vandette (Inactive)
            Reporter:
            Ekaterina Pavlova
            Votes:
            0 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: