8218169: [AOT] Segmentation fault when running java with AOTed Graal in -Xcomp mode on windows

Reviewed-by: kvn